# OOS_Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/agent_config/: standard.txt  writer_a.txt  writer_b.txt
config/examples/01_no_conflict/agents/: a1.txt  a2.txt  a3.txt
config/examples/01_no_conflict/input/shared/: info.txt
config/examples/01_no_conflict/input/work/: a.txt
config/examples/02_preemption/agents/: high.txt  low.txt
config/examples/03_deadlock/agents/: a1.txt  a2.txt
config/json/: deadlock_attempt.json  preemption_config.json  standard.json
scripts/: build-gcc.ps1
src/: main.cpp
src/agent/: IOperation.hpp  Operations.hpp  agent.hpp
src/agent/Operations/: Operations.hpp
src/agent/Parser/: AgentParser.cpp  AgentParser.hpp
src/core/: AgentConfig.hpp  AgentState.hpp  FileHandle.hpp  MountPoint.hpp  Operations.hpp  SimSettings.hpp  config.cpp  config.hpp
src/deadlock/: DeadlockGraph.cpp  DeadlockGraph.hpp
src/execution/: OperationExecutor.cpp  OperationExecutor.hpp
src/reporting/: GanttTracker.cpp  GanttTracker.hpp  SimulationReporter.cpp  SimulationReporter.hpp
src/scheduler/: IScheduler.hpp  PriorityPreemptiveScheduler.cpp  PriorityPreemptiveScheduler.hpp
src/simulation/: EventLog.cpp  EventLog.hpp  Simulator.cpp  Simulator.hpp
src/vfs/: IVFS.h  IVFS.hpp  InMemoryVFS.cpp  InMemoryVFS.hpp  RWLock.cpp  RWLock.hpp  VFSNode.hpp  VFSResult.hpp  vfs.h
tests/: test_VFS.cpp  test_agent_parser.cpp  test_config.cpp  test_deadlock_graph.cpp  test_scheduler.cpp
